fix icon align

--- a/app/assets/stylesheets/components/_report_form.scss
+++ b/app/assets/stylesheets/components/_report_form.scss
@@ -28,7 +28,8 @@
   box-shadow: 0px 5px 5px 0px rgba(212, 149, 0, 0.20);
   font-weight: 600;
   i {
-    font-size: 30px;
+    font-size: 28px;
+    padding-top: 2px;
   }
 }
 
